@@ -1,3 +1,9 @@
+2007-07-26  Jürg Billeter  <j@bitron.ch>
+
+	* vala/valastruct.vala, gobject/valacodegeneratormethod.vala,
+	  gobject/valacodegeneratorstruct.vala: use GSlice and generate free
+	  function for reference-type structs with a creation method
+
 2007-07-25  Jürg Billeter  <j@bitron.ch>
 
 	* vala/valaarray.vala: remove comments of overridden methods
